apps/overseerr/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx 
  rules:
    - host: overseerr.home.adammihajlovic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  name: http
